# my-little-soda

./: .coverage.toml  .gitignore  .investigation-log  ARCHITECTURE_AUDIT_REPORT.md  BUILD_ARTIFACTS_ANALYSIS.md  C1A_EMPTY_REPOSITORY_TEST_RESULTS.md  C1D_DIRECTORY_STRUCTURE_SCENARIO_COMPLETION.md  C1E_REPOSITORY_WITH_ISSUE_TEMPLATES_COMPLETION.md  C2A_INIT_COMMAND_EXECUTION_RESULTS.md  CLAUDE.md  Cargo.toml  Cross.toml  DOCUMENTATION_CATEGORIZATION_REPORT.md  INFRASTRUCTURE.md  PIPELINE_COMPLETION.md  README.md  RELEASE_PIPELINE_STATUS.md  VERBOTEN.md  clambake.example.toml  clambake.toml  code_quality_analysis_265.md  fix_test.md  mvp.md  my-little-soda.example.toml  my-little-soda.toml  phoenix_config.yaml  simple_metrics_test.rs  spec.md  test_file_80.txt  test_file_81.txt  test_metrics.rs  verification_summary.txt  white_magic.md
.clambake/: config.toml
.clambake/config/: clambake.toml
.clambake/metrics/: agent_utilization.jsonl  coordination_decisions.jsonl  routing_metrics.jsonl
.flox/: env.json
.flox/env/: manifest.toml
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci-mode-test-matrix.yml  clambake-bundling.yml  performance-testing.yml  property-tests.yml  release.yml
archive/: README.md
archive/analysis-reports/: ARCHITECTURAL_DEBT_ANALYSIS.md  README-AUDIT-FINDINGS.md  UNDONE_WORK_SUMMARY.md
archive/completed-work/: C1B_REPOSITORY_WITH_README_COMPLETION.md
archive/development-planning/: pathfinder-reconnaissance-2025.md  spec.md  test_strategy_deliverables.md
archive/test-results/: C2B_FILE_DIRECTORY_VALIDATION_RESULTS.md
docker/: README.md
docs/: README.md  agent_lifecycle.md  autonomous-features.md  autonomous_system_configuration.md  configuration.md  drift_correction_examples.md  examples.md  platform-support.md  system_analysis_and_opportunities.md  testable_architecture.md  troubleshooting.md  workflows.md
migrations/: 001_initial.sql
prompts/: README.md  finishing-prompt.md  initial-system-prompt.md  quick-start-guide.md  workflow-instructions.md
scripts/: README.md  cleanup-build-artifacts.sh  run-coverage.sh  run-property-tests.sh  run-stability-test.sh  setup-phoenix.sh
specs/: 000-index.md  README.md  cutover.md  issue-125-state-machine-statig-agent-lifecycle.md  issue-126-github-actions-agent-integration.md  issue-131-functional-bundling-system.md  template.md  three-issue-implementation-strategy.md
specs/cross-cutting/: README.md
specs/domains/: README.md
src/: README.md  config.rs  database.rs  lib.rs  main.rs  main_backup.rs  metrics.rs  observability.rs  priority.rs  shutdown.rs  telemetry.rs  train_schedule.rs
src/agent_lifecycle/: commands.rs  detector.rs  executor.rs  mocks.rs  mod.rs  state_machine.rs  tests.rs  traits.rs  types.rs
src/agents/: coordinator.rs  integrator.rs  mod.rs  process_lifecycle.rs  process_manager.rs  recovery.rs  resource_monitor.rs  router.rs  validation.rs
src/agents/routing/: assignment.rs  coordination.rs  decisions.rs  filters.rs  mod.rs
src/autonomous/: error_recovery.rs  integration.rs  mod.rs  persistence.rs  state_validation.rs  work_continuity.rs  workflow_state_machine.rs
src/bundling/: bundler.rs  git_ops.rs  mod.rs  types.rs
src/cli/: mod.rs
src/cli/commands/: actions.rs  agent.rs  bundle.rs  doctor.rs  doctor_backup.rs  init.rs  land.rs  metrics.rs  mod.rs  peek.rs  pop.rs  reset.rs  route.rs  status.rs
src/cli/commands/doctor/: agent_state.rs  config_diagnostics.rs  environment_diagnostics.rs  git_diagnostics.rs  github_auth_diagnostics.rs  github_labels.rs  github_repo_diagnostics.rs  mod.rs  output.rs  system_diagnostics.rs  types.rs  workflow_diagnostics.rs
src/cli/commands/init/: config.rs  labels.rs  mod.rs  setup.rs  validation.rs
src/fs/: mod.rs
src/git/: mod.rs  operations.rs
src/github/: actions.rs  branches.rs  client.rs  comments.rs  errors.rs  issues.rs  mod.rs  pulls.rs  retry.rs  types.rs
src/http/: client.rs  mod.rs  test.rs
src/metrics/: analysis.rs  bottleneck.rs  mod.rs  performance.rs  reports.rs  storage.rs  tracking.rs  types.rs
src/workflows/: mod.rs  state_machine.rs
templates/: README.md
tests/: README.md  README_router_tests.md  acceptance_criteria_validation.rs  agent_coordination_test.rs  agent_diagnostic_validation_tests.rs  agent_labeling_test.rs  agent_lifecycle_tests.rs  agent_state_diagnostics_tests.rs  api_rate_limit_validation_test.rs  automated_validation_integration_test.rs  autonomous_error_recovery_scenarios.rs  autonomous_github_coordination_tests.rs  autonomous_performance_benchmarks.rs  autonomous_restart_continuity_tests.rs  autonomous_workflow_tests.rs  branch_name_generation_tests.rs  c1a_empty_repository_test.rs  c1c_repository_with_cicd_test.rs  c1d_repository_with_complex_directory_structure_test.rs  c1e_repository_with_existing_issue_templates_test.rs  c2b_file_directory_validation_test.rs  ci_mode_integration_tests.rs  ci_mode_property_tests.rs  clambake_peek_bug_reproduction.rs  cleanup_isolation_tests.rs  cli_help_test.rs  cli_integration_tests.rs  comprehensive_bundling_integration_test.rs  config_file_validation_tests.rs  conflict_detection_tests.rs  coordinator_tests.rs  cross_platform_compatibility_testing.rs  doctor_command_tests.rs  doctor_comprehensive_tests.rs  end_to_end_validation_tests.rs  enhanced_cleanup_isolation_tests.rs  enhanced_conflict_resolution_tests.rs  expressive_test_framework.rs  file_system_integration_tests.rs  git_integration_validation_tests.rs  (+44 more)
tests/fixtures/: README.md  automated_validators.rs  github_issues.json  init_integration.rs  mod.rs  repository_states.rs  test_harness.rs  test_metrics_collector.rs  test_result_reporting.rs  validation_helpers.rs
