[package]
name = "my-little-soda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
octocrab = "0.44.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "test-util", "process", "time"] }
toml = "0.8"
governor = "0.6.3"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
config = "0.14.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"], optional = true }
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.20.2"
fd-lock = "4.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
statig = "0.4.1"
thiserror = "2.0.16"
rand = "0.9.2"
hostname = "0.4.1"
tokio-test = "0.4.4"
mockall = { version = "0.13", optional = true }

# OpenSSL configuration for cross-compilation
# Add vendored OpenSSL for macOS x86_64 cross-compilation to avoid linking issues
[target.x86_64-apple-darwin.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Binary size optimizations
[profile.release]
strip = true          # Strip symbols from binary
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce parallel code generation for better optimization
panic = "abort"      # Reduce binary size by not including unwinding code
opt-level = "z"      # Optimize for size over speed

[features]
default = []
database = ["sqlx"]
autonomous = []
metrics = []
observability = []
testing = ["mockall"]

[dev-dependencies]
once_cell = "1"
assert_cmd = "2.0.17"
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
proptest = "1.5.0"
proptest-derive = "0.4.0"
futures = "0.3"
fastrand = "2.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.0"
reqwest-retry = "0.5.0"
mockall = "0.13"

